# quitanda-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  postgresql.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 07fab699f769_criar_comunidade_model.py  310995fba177_coluna_ativo_para_usuarios.py  3c7490ee00f9_criar_tabela_vendedores.py  52f459e686aa_criar_produtos_e_produtos_vendedores_.py  7bd7ce483d18_email_set_unique_e_nullable.py  9084811d3fe6_criar_pedidos.py  a7fb6f5126b3_criando_tabela_endereco.py  b7a66745cf14_init_database.py  c6f87775ef06_usuario_cadastro_simplificado.py  d23bbd641b7f_criando_tabela_de_tokens.py
app/: dependencies.py  main.py  seed.py  settings.py
app/database/: __init__.py
app/database/models/: __init__.py  comunidade.py  endereco.py  pedido.py  produto.py  usuario.py  vendedor.py
app/database/repositories/: comunidade.py  endereco.py  pedido.py  produto.py  token.py  usuario.py  vendedor.py
app/domain/: error.py
app/domain/auth/: auth_errors.py  auth_service.py
app/domain/comunidades/: comunidade.py  comunidade_errors.py  comunidade_service.py
app/domain/enderecos/: endereco.py  endereco_errors.py  endereco_service.py
app/domain/pedidos/: pedido.py  pedido_errors.py  pedido_service.py
app/domain/produtos/: produto.py  produto_service.py
app/domain/usuarios/: usuario.py  usuario_errors.py
app/domain/vendedores/: produto.py  (+6 more)
app/http/: cookies.py
app/routers/: auth.py  comunidades.py  pedidos.py  produtos.py  usuarios.py  vendedores.py
nginx/: nginx.conf
(+36 files in other folders)
